<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buy or not</string>
    <string name="update">Mettre à jour</string>
    <string name="add">Ajouter</string>
    <string name="reset">Reset</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>

    <string name="sort">Trier</string>
    <string name="sortRecent">Trier par ordre d\'ajout</string>
    <string name="sortLibelle">Trier par libéllé</string>
    <string name="sortNovaNutriscore">Trier nova et nutriscore</string>
    <string name="sortNutriscore">Trier par nutriscore</string>
    <string name="sortNova">Trier par nova</string>

    <string name="libelle">Libellé</string>
    <string name="quantite">Quantité</string>
    <string name="ingredients">Ingrédients</string>
    <string name="lien">Lien</string>
    <string name="energie">Énergie</string>
    <string name="fibre">Fibre</string>
    <string name="matieresGrasses">Matières grasses</string>
    <string name="acidesGras">Acides gras</string>
    <string name="glucides">Glucides</string>
    <string name="sucres">Sucres</string>
    <string name="sel">Sel</string>
    <string name="sodium">Sodium</string>
    <string name="proteine">Protéine</string>
    <string name="fruits">Fruits</string>
    <string name="codeEmballeur">Code emballeur</string>
    <string name="nutriScore">Nutriscore</string>
    <string name="nova">Nova</string>

    <string name="codeEmballeurNull">Sélectionner un code emballeur</string>
</resources>